--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -73,6 +73,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
+body {
+  position: relative;
+}
+
 .container {
   max-width: 1240px;
   width: 100%;
@@ -87,12 +91,29 @@ h1, h2, h3, h4, h5, h6 {
   color: #750000;
 }
 
+.header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 20;
+  background: #fff;
+}
 .header__content {
   border-bottom: 2px solid #750000;
   padding: 15px 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.header__content-logo {
+  width: 346px;
+  height: 100px;
+}
+.header__content-logo img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .header__content-social {
   width: 243px;
@@ -117,9 +138,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .main {
-  margin: 50px 0;
+  width: 100%;
+}
+.main__content {
+  position: relative;
+  height: 100vh;
+}
+.main__content-swiper {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .main__content-swiper .swiper-slide {
+  width: 100%;
   border-radius: 50px;
   border: 4px solid #750000;
   display: flex;
@@ -164,7 +197,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #e0bea2;
 }
 .main__swiper-bg {
-  width: 400px;
+  width: 35%;
   height: 600px;
 }
 .main__bg-img {
@@ -224,6 +257,10 @@ h1, h2, h3, h4, h5, h6 {
   gap: 50px;
 }
 .product__wrap-flex {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  flex-direction: column;
   flex: 0 1 30%;
   border: 1px solid #d9d9d9;
   border-radius: 30px;
@@ -242,8 +279,8 @@ h1, h2, h3, h4, h5, h6 {
 .product__bg-img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: fill;
+     object-fit: fill;
   position: absolute;
   border-radius: 30px 30px 20px 20px;
   top: 0;
@@ -256,7 +293,6 @@ h1, h2, h3, h4, h5, h6 {
   cursor: pointer;
 }
 .product__flex-info {
-  width: 295px;
   margin: 20px;
 }
 .product__info-name {
@@ -356,17 +392,187 @@ h1, h2, h3, h4, h5, h6 {
   color: #d9d9d9;
 }
 
+.user-page-modal {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  z-index: 10;
+}
+
+.user-page-content {
+  position: relative;
+  margin-top: 180px;
+}
+.user-page-content-body {
+  width: 890px;
+  height: 420px;
+  overflow-y: auto;
+  margin-top: 50px;
+}
+
+.user-page-body-item {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.user-page-item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding: 25px 20px;
+  border: 1px solid #750000;
+  border-radius: 30px;
+  width: 781px;
+  height: 200px;
+}
+.user-page-item-img {
+  border: 1px solid #750000;
+  border-radius: 180px;
+  width: 150px;
+  height: 150px;
+}
+.user-page-item-info {
+  height: 128px;
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.product-info-name {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  color: #750000;
+}
+.product-info-text {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  color: #750000;
+}
+.product-info-price {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 36px;
+  color: #000;
+}
+
+.user-page-sapling {
+  width: 320px;
+  height: 387px;
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0 auto;
+}
+.user-page-sapling-info {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.user-page-sapling-name {
+  font-weight: 700;
+  font-size: 24px;
+  color: #750000;
+}
+.user-page-sapling-btn {
+  padding: 25px 38px;
+  font-weight: 700;
+  font-size: 36px;
+  text-align: center;
+  border: 4px solid #750000;
+  border-radius: 20px;
+  color: #750000;
+}
+
 @media (max-width: 1024px) {
   .main__content-swiper .swiper-slide {
     background: #750000;
   }
   .main__body-info {
+    width: 70%;
     position: relative;
     top: unset;
     left: unset;
     transform: unset;
   }
   .main__info-title {
+    font-size: 40px;
+  }
+  .main__swiper-body {
+    width: 50%;
+    height: 100%;
+  }
+  .main__info-title {
     color: #d9d9d9;
+  }
+  .main__swiper-bg {
+    width: 50%;
+    height: 100%;
+  }
+  .product__wrap-flex {
+    flex: 0 1 27%;
+  }
+  .product__flex-bg {
+    height: 305px;
+  }
+  .product__price-info {
+    font-size: 29px;
+  }
+  .product__footer-btn {
+    padding: 0 14px;
+  }
+}
+@media (max-width: 800px) {
+  .product__content-info {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .product__info-form {
+    width: 100%;
+  }
+  .product__flex-bg {
+    height: 225px;
+  }
+  .product__wrap-flex {
+    flex: 0 1 46%;
+  }
+  .main__body-info {
+    width: 50%;
+  }
+  .main__info-title {
+    font-size: 30px;
+  }
+  .header__content {
+    gap: 20px;
+    flex-direction: column;
+  }
+}
+@media (max-width: 665px) {
+  .product__wrap-flex {
+    flex: 0 1 100%;
+  }
+  .product__flex-bg {
+    width: 100%;
+    height: 400px;
+  }
+  .product .main__body-info {
+    width: 100%;
+  }
+  .product .main__info-title {
+    font-size: 30px;
+  }
+}
+@media (max-width: 425px) {
+  .main__content {
+    height: 80vh;
   }
 }/*# sourceMappingURL=main.css.map */
