--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -20,8 +20,11 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 $font-family: "Roboto", sans-serif;
 $second-family: "Open Sans", sans-serif;
 $third-family: "Inter", sans-serif;
+$background: #e0bea2;
 $bordo: #750000;
 $gray: #d9d9d9;
+$dark-bordo: #533333;
+$green: #007505;
 $dark-gray: #7d7d7d;
 @mixin stylefontz($ff, $fw, $fs, $c){
     font-family: $ff;
@@ -47,10 +50,24 @@ body {
     @include stylefontz($font-family, 700, 36px, $bordo);
 }
 .header {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 20;
+    background:  #fff;
     &__content {
         border-bottom: 2px solid $bordo;
         padding: 15px 20px;
         @include stylcenter(flex, center, space-between);
+    }
+    &__content-logo {
+        width: 346px;
+        height: 100px;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
     }
     &__content-social {
         width: 243px;
@@ -68,9 +85,19 @@ body {
     }
 }
 .main {
-    margin: 50px 0;
+    width: 100%;
+    &__content {
+        position: relative;
+        height: 100vh;
+    }
     &__content-swiper {
+        width: 100%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         .swiper-slide {
+            width: 100%;
             border-radius: 50px;
             border: 4px solid $bordo;
             @include stylcenter(flex, center, space-between);
@@ -104,7 +131,7 @@ body {
         @include stylefontz($second-family, 400, 16px,  $background);
     }
     &__swiper-bg {
-        width: 400px;
+        width: 35%;
         height: 600px;
     }
     &__bg-img {
@@ -146,6 +173,8 @@ body {
         gap: 50px;
     }
 	&__wrap-flex {
+        @include stylcenter(flex, start, space-between);
+        flex-direction: column;
         flex: 0 1 30%;
         border: 1px solid $gray;
         border-radius: 30px;
@@ -164,7 +193,7 @@ body {
 	&__bg-img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: fill;
         position: absolute;
         border-radius: 30px 30px 20px 20px;
         top: 0;
@@ -177,7 +206,6 @@ body {
         cursor: pointer;
 	}
 	&__flex-info {
-        width: 295px;
         margin: 20px;
 	}
 	&__info-name {
@@ -244,7 +272,108 @@ body {
         @include stylefontz(  $font-family, 300, 16px,   $gray);
     }
 }
+.user-page-modal {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    z-index: 10;
+}
 
+.user-page-content {
+    position: relative;
+    margin-top: 180px;
+
+    &-body {
+        width: 890px;
+        height: 420px;
+        overflow-y: auto;
+        margin-top: 50px;
+    }
+}
+
+.user-page-body-item {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.user-page-item {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 25px 20px;
+    border: 1px solid $bordo;
+    border-radius: 30px;
+    width: 781px;
+    height: 200px;
+
+    &-img {
+        border: 1px solid $bordo;
+        border-radius: 180px;
+        width: 150px;
+        height: 150px;
+    }
+
+    &-info {
+        height: 128px;
+        display: flex;
+        align-items: start;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+}
+
+.product-info {
+    &-name {
+        @include stylefontz( $font-family, 700, 24px,  $bordo);
+    }
+
+    &-text {
+        @include stylefontz( $font-family, 400, 24px,  $bordo);
+    }
+
+    &-price {
+        @include stylefontz( $font-family, 400, 36px,  #000);
+        
+    }
+}
+
+.user-page-sapling {
+    width: 320px;
+    height: 387px;
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+
+    &-info {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+
+    &-name {
+        font-weight: 700;
+        font-size: 24px;
+        color: $bordo;
+    }
+
+    &-btn {
+        padding: 25px 38px;
+        font-weight: 700;
+        font-size: 36px;
+        text-align: center;
+        border: 4px solid $bordo;
+        border-radius: 20px;
+        color: $bordo;
+    }
+}
 
 @media (max-width: 1024px) {
     .main {
@@ -254,14 +383,93 @@ body {
             }
         }
         &__body-info {
+            width: 70%;
             position: relative;
             top: unset;
             left: unset;
             transform: unset;
         }
         &__info-title {
+            font-size: 40px;
+        }
+        &__swiper-body {
+            width: 50%;
+            height: 100%;
+        }
+        &__info-title {
             color: $gray;
         }
+        &__swiper-bg {
+            width: 50%;
+            height: 100%;
+        }
     }
-     
+    .product {
+        &__wrap-flex {
+            flex: 0 1 27%;
+        }
+        &__flex-bg {
+            height: 305px;
+        }
+        &__price-info {
+            font-size: 29px;
+        }
+        &__footer-btn {
+            padding: 0 14px;
+        }
+    }
+      
+}
+@media (max-width: 800px) {
+    .product {
+        &__content-info {
+            flex-direction: column;
+            gap: 20px;
+        }
+        &__info-form {
+            width: 100%;
+        }
+        &__flex-bg {
+            height: 225px;
+        }
+        &__wrap-flex {
+            flex: 0 1 46%;
+        }
+    }
+    .main {
+        &__body-info {
+            width: 50%;
+        }
+        &__info-title {
+            font-size: 30px;
+        }
+    }
+    .header__content {
+        gap: 20px;
+        flex-direction: column;
+    }
+}
+@media (max-width: 665px) {
+    .product {
+    &__wrap-flex {
+        flex: 0 1 100%;
+    }
+    &__flex-bg {
+        width: 100%;
+        height: 400px;
+    }
+    .main {
+        &__body-info {
+            width: 100%;
+        }
+        &__info-title {
+            font-size: 30px;
+        }
+    }
+}
+}
+@media (max-width: 425px) {
+    .main__content {
+        height: 80vh;
+    }
 }
