--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -293,7 +293,8 @@ body {
   cursor: pointer;
 }
 .product__flex-info {
-  margin: 20px;
+  width: 100%;
+  padding: 20px;
 }
 .product__info-name {
   font-family: "Roboto", sans-serif;
@@ -570,6 +571,12 @@ body {
   .product .main__info-title {
     font-size: 30px;
   }
+}
+.favorite {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  position: absolute;
 }
 @media (max-width: 425px) {
   .main__content {
